--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,1 +1,21 @@
 
+<%= form_for post do |f| %>
+
+  <%= f.label "Title:" %><br>
+  <%= f.text_field :title %><br>
+
+  <%= f.label "Content:" %><br>
+  <%= f.text_area :content %><br><br>
+
+  <%= f.label "Categories:" %><br>
+  <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %><br>
+  
+  <p>Don't see the category you have in mind?<br>
+  Create one below:</p>
+  
+  <%= f.fields_for :categories, post.categories.build do |categories_fields| %>
+    <%= categories_fields.text_field :name %><br>
+  <% end %><br>
+
+  <%= f.submit %>
+<% end %>
