--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,30 @@
+<h1>Here are all the posts for this post</h1>
+
+<h5>Title:</h5> <p><%= @post.title %></p><hr>
+<h5>Content:</h5> <%= @post.content %><hr>
+
+<% @post.post_categories.each do |pstc|%>
+    <h5>Category:</h5>
+    <%= link_to pstc.category.name, category_path(pstc.category) %>
+<% end %><hr>
+
+
+<%= form_for @comment do |cmt| %>
+
+    <%= cmt.label "From username:" %><br>
+    <%= cmt.collection_select :user_id, User.all, :id, :username %><br>
+
+    <%= cmt.label "Content:" %><br>
+    <%= cmt.text_area :content %><br><br>
+
+  
+    <%= cmt.submit %><br>
+<% end %>
+
+<% @post.comments.each do |comment| %>
+    
+    <%= comment.user.username  %>
+    <%= comment.content %>
+
+<% end %>
 
