--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Here is a list of all the post: </h1>
 
+<ol>
 <% @posts.each do |post| %>
-    <%= link_to post.title, post_path(post) %>
+    <li><%= link_to post.title, post_path(post) %></li><br>
 <% end %>
+</ol>
