--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -10,12 +10,13 @@
   <%= f.label "Categories:" %><br>
   <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %><br>
   
-  <p>Don't see the category you have in mind?<br>
+  <p>Dont see the category you have in mind?<br>
   Create one below:</p>
   
   <%= f.fields_for :categories, post.categories.build do |categories_fields| %>
-    <%= categories_fields.text_field :name %><br>
-  <% end %><br>
+    <%= categories_fields.label "Category" %>
+    <%= categories_fields.text_field :name %>
+  <% end %>
 
   <%= f.submit %>
 <% end %>
